tests/ui/privacy/private-type-in-inference-2.stderr
error[E0277]: the trait bound `u32: LocalOnly<_>` is not satisfied
  --> $DIR/private-type-in-inference-2.rs:18:25
   |
LL |     dep::assert_local::<u32, _>();
   |                         ^^^ the trait `LocalOnly<_>` is not implemented for `u32`
   |
help: the trait `LocalOnly<_>` is not implemented for `u32`
      but trait `LocalOnly<PrivateMarker>` is implemented for it
  --> $DIR/auxiliary/private-type-in-inference.rs:31:1
   |
LL | impl LocalOnly<private::CurrentCrate> for u32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_local`
  --> $DIR/auxiliary/private-type-in-inference.rs:44:8
   |
LL | pub fn assert_local<T, Marker>()
   |        ------------ required by a bound in this function
LL | where
LL |     T: LocalOnly<Marker>,
   |        ^^^^^^^^^^^^^^^^^ required by this bound in `assert_local`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
